--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 spring.application.name=base-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=admin
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Opcional: Configuración del pool de conexiones HikariCP
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 
-# Configuración de Hibernate (JPA)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Configuración de Liquibase
 spring.liquibase.change-log=classpath:db/changelogs/db.changelog-master.xml
 spring.liquibase.enabled=true
