add dockerization & script to start the api

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -6,8 +6,10 @@ spring.datasource.password=
 
 # Configuración de Hibernate para H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # Deshabilitar Liquibase en pruebas (opcional)
 spring.liquibase.enabled=false
+
+
