--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:db/changelogs/db.changelog-master.xml
 spring.liquibase.enabled=true
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
